--- a/src/index.css
+++ b/src/index.css
@@ -463,6 +463,14 @@ button:disabled {
   /* for javascript */
   overflow: hidden;
 }
+.media-grid-skeleton {
+  --column-count: 2;
+  --column-gap: 8px;
+  display: grid;
+  grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+  gap: var(--column-gap);
+  overflow: hidden;
+}
 .img-cover {
   width: 100%;
   height: 100%;
