--- a/src/index.css
+++ b/src/index.css
@@ -850,3 +850,105 @@ button:disabled {
 .filter-chip.selected .close-icon {
   padding: 8px;
 }
+/*-----------------------------------*\
+  #MEDIA QUERIES
+\*-----------------------------------*/
+
+/**
+  * Responsive for larger than  900px screen
+*/
+@media only screen and (min-width: 900px) {
+  /**
+    * TYPOGRAPHY
+  */
+  .headline-medium {
+    font-size: var(--fs-display-medium);
+    font-weight: var(--weight-regular);
+    line-height: 44px;
+  }
+  .title-large {
+    font-size: var(--fs-headline-small);
+    font-weight: var(--weight-regular);
+    line-height: 32px;
+  }
+  /**
+  * REUSED STYLE
+  */
+  .container {
+    padding-inline: 24px;
+  }
+  .section {
+    margin-block-end: 36px;
+  }
+  .section-title {
+    margin-block-end: 20px;
+  }
+  .media-grid {
+    --column-count: 3;
+    --column-gap: 12px;
+  }
+  .collection-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 24px;
+  }
+  /**
+  * COMPONENTS
+  */
+
+  /* Card*/
+  .card .card-content {
+    opacity: 0;
+    transition: opacity var(--motion-duration-short-2) var(--motion-easing-linear);
+  }
+  .card:where(:hover, :focus-visible) .card-content {
+    opacity: 1;
+  }
+}
+/**
+  * Responsive for larger than  1240px screen
+*/
+@media only screen and (min-width: 1240px) {
+  /**
+  * TYPOGRAPHY
+  */
+  .headline-medium {
+    font-size: var(--fs-display-large);
+    font-weight: var(--weight-regular);
+    line-height: 64px;
+  }
+  .title-large {
+    font-size: var(--fs-headline-medium);
+    font-weight: var(--weight-regular);
+    line-height: 36px;
+  }
+  /**
+  * REUSED STYLE
+  */
+  .scrim {
+    display: none;
+  }
+  .main,
+  .footer {
+    margin-inline-start: 360px !important;
+  }
+  .container {
+    max-width: 1128px;
+    width: 100%;
+    margin-inline: auto;
+  }
+  .media-grid {
+    --column-gap: 16px;
+  }
+  .collection-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .section-title {
+    margin-block-end: 24px;
+  }
+
+  /* HEADER */
+  .top-app-bar :where(.icon-btn:first-child, .logo) {
+    display: none;
+  }
+}
