--- a/src/scence/collections/collection.css
+++ b/src/scence/collections/collection.css
@@ -12,3 +12,15 @@
   margin-block: 12px;
   margin-inline: auto;
 }
+/**
+  * Responsive for larger than  900px screen
+*/
+
+@media only screen and (min-width: 900px) {
+  /**
+  * COLLECTION
+  */
+  .collection .btn {
+    margin-block: 24px;
+  }
+}
