--- a/src/scence/photos/index.css
+++ b/src/scence/photos/index.css
@@ -44,3 +44,17 @@
 .detail .title-large {
   margin-block: 32px 16px;
 }
+/**
+  * Responsive for larger than  1240px screen
+*/
+@media only screen and (min-width: 1240px) {
+  .detail-wrapper {
+    height: 788px;
+  }
+  .detail-banner {
+    max-height: 760px;
+  }
+  .detail .title-large {
+    margin-block-start: 40px;
+  }
+}
